[project]
name = "restaurant-opt"
version = "0.1.0"
description = "Restaurant Optimization RL Environment"
authors = [{name = "Dinesh Kumar Dasari", email = "dineshkumardasara@gmail.com"}]
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "pandas",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
